etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 67 0.0.0.0/0 any 0.0.0.0/0 in_wlp4s0
-A ufw-user-input -i wlp4s0 -p udp --dport 67 -j ACCEPT

### tuple ### allow udp 68 0.0.0.0/0 any 0.0.0.0/0 in_wlp4s0
-A ufw-user-input -i wlp4s0 -p udp --dport 68 -j ACCEPT

### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in_wlp4s0
-A ufw-user-input -i wlp4s0 -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in_wlp4s0
-A ufw-user-input -i wlp4s0 -p tcp --dport 53 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 10.42.0.0/24 in_wlp4s0!out_eno1
-A ufw-user-forward -i wlp4s0 -o eno1 -s 10.42.0.0/24 -j ACCEPT

### tuple ### route:allow any any 10.42.0.0/24 any 0.0.0.0/0 in_eno1!out_wlp4s0
-A ufw-user-forward -i eno1 -o wlp4s0 -d 10.42.0.0/24 -j ACCEPT

### tuple ### allow udp 67 0.0.0.0/0 any 0.0.0.0/0 in_virbr0
-A ufw-user-input -i virbr0 -p udp --dport 67 -j ACCEPT

### tuple ### allow udp 68 0.0.0.0/0 any 0.0.0.0/0 in_virbr0
-A ufw-user-input -i virbr0 -p udp --dport 68 -j ACCEPT

### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in_virbr0
-A ufw-user-input -i virbr0 -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in_virbr0
-A ufw-user-input -i virbr0 -p tcp --dport 53 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 192.168.122.0/24 in_virbr0!out_eno1
-A ufw-user-forward -i virbr0 -o eno1 -s 192.168.122.0/24 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
